--- a/Habr.RedisCompression.csproj
+++ b/Habr.RedisCompression.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+      <PackageReference Include="Lorem.NET" Version="1.0.6" />
+      <PackageReference Include="StackExchange.Redis.Extensions.AspNetCore" Version="8.0.4" />
+      <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="8.0.4" />
+      <PackageReference Include="StackExchange.Redis.Extensions.MsgPack" Version="8.0.4" />
+      <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="8.0.4" />
+      <PackageReference Include="StackExchange.Redis.Extensions.System.Text.Json" Version="8.0.4" />
+    </ItemGroup>
+
 </Project>
